Update title and header for AI POS Receipt Generator

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Coupon Generator</title>
+    <title>AI POS Receipt Coupon Generator</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Include html2canvas for image generation -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
@@ -123,7 +123,7 @@
 
     <div class="max-w-4xl mx-auto">
         <header class="text-center mb-6">
-            <h1 class="text-3xl font-bold text-gray-800">POS Receipt Coupon Generator</h1>
+            <h1 class="text-3xl font-bold text-gray-800">AI POS Receipt Coupon Generator</h1>
             <p id="auth-status" class="text-sm text-gray-500 mt-1">Storage: Browser Local Storage</p>
         </header>
         
